# kubernetes-rca-system

./: .gitignore  .replit  README.md  agent_coordinator.py  app.py  dependencies.txt  fix_chatbot_interface.py  kind-config.yaml  pyproject.toml  setup_test_cluster.py  test_full_logging.py  test_logger.py  test_suggestions_update.py
.streamlit/: config.toml
agents/: __init__.py  base_agent.py  coordinator.py  events_agent.py  logs_agent.py  mcp_agent.py  mcp_coordinator.py  mcp_events_agent.py  mcp_logs_agent.py  mcp_metrics_agent.py  mcp_topology_agent.py  mcp_traces_agent.py  metrics_agent.py  resource_analyzer.py  topology_agent.py  traces_agent.py
components/: __init__.py  chatbot_interface.py  interactive_session.py  report.py  sidebar.py  visualization.py
kube-config/: safe-kubeconfig.yaml
logs/: 00f98d65-5257-49c1-bbd5-4cd55f3fa5dc.json  035d2e68-d8be-4e2d-84d1-df567f6c4985.json  1827d8b2-d846-4487-94a4-1ed0232223d7.json  1899c3be-f8e5-470e-bc8e-675f96080889.json  1994a72c-aac8-4ebe-8c7f-67ddd9a4a465.json  1ffb047a-5616-475c-aead-135e4eb2963b.json  20250419_190111_Pod_liveness-probe-fail_hypothesis.json  20250419_191445_Pod_crash-pod_hypothesis.json  20250419_191944_Pod_init-container-fail_hypothesis.json  20250419_192332_Pod_oom-test_hypothesis.json  20250419_192333_Pod_oom-test_hypothesis.json  21ed9655-d73f-488e-968b-681341e2a540.json  257885c9-4b2c-44db-86ca-2e729608c754.json  26256b1f-798d-42fb-8832-b9597e2f88c1.json  2924072a-9f18-46d3-8401-a0e25cbd3478.json  2c9ffae8-0afe-4244-8627-a43646cf4f0d.json  2d5773e3-67aa-4c74-8f97-da5484270da7.json  (+23 more)
(+31 files in other folders)
